<resources>
    <string name="app_name">AceReader</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="START">Let\'s Start</string>
    <string name="Report_Card">Report Card</string>
    <string name="play">play</string>
    <string name="pause">Pause</string>
    <string name="Im_ready">I\'m ready to take the quiz!</string>
    <string name="start_speaking">us.</string>
    <string name="question1">Which word has "a" as in the word "same"?</string>
    <string name="score">Score:</string>
    <string name="attemp">1/5</string>
    <string name="Submit">SUBMIT</string>
    <string name="play_again">Replay</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bar_chart">BarChartActivity</string>
    <string name="title_activity_start_quiz">StartQuizActivity</string>
    <string name="quizRules">This Quiz will contain 5 questions. Press the icon above to start.</string>
    <string name="title_activity_quize_reader_popup">Quize_reader_popup</string>
    <string name="home">Home</string>
    <string name="yourscore">Your Score Is</string>
    <string name="welcome">Welcome Rani!</string>
</resources>
