<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textColor="@color/red"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/START"
        android:textSize="30sp"
        android:textColor="@color/whiteText"
        android:id="@+id/button_start"
        android:layout_marginRight="30dp"
        android:background="@color/accent_material_light"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:buttonStyle"
        android:layout_width="wrap_content"
        android:textSize="30sp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/Report_Card"
        android:textColor="@color/whiteText"
        android:id="@+id/button_reportcard"
        android:background="@color/accent_material_light"

        android:layout_below="@+id/button_start"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/launcherico"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_start"
        android:layout_alignEnd="@+id/button_start"
        android:layout_above="@+id/textView"
        android:layout_below="@+id/button_reportcard" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView6"
        android:textSize="35dp"
        android:textColor="@color/material_blue_grey_800"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/imageView3"
        android:src="@drawable/rani"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
