<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@color/accent_material_light">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/whiteText"
            android:background="#00FF0088"
            android:text="@string/score"
            android:padding="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:gravity="center_horizontal"
            android:textColor="@color/whiteText"
            android:background="#00FF0088"
            android:text="@string/attemp"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="What is the name of the rabbit in the story?"
            android:textAlignment="center"
            android:textSize="25sp"
            android:id="@+id/textView_question"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:background="@color/blue"
            android:id="@+id/button_option1"
            android:layout_below="@+id/textView_question"
            android:padding="20dp"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_alignStart="@+id/textView_question"
            android:layout_alignEnd="@+id/textView_question" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:background="@color/blue"

            android:textSize="25sp"
            android:padding="20dp"
            android:id="@+id/button_option2"
            android:layout_below="@+id/button_option1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_alignStart="@+id/textView_question"
            android:layout_alignEnd="@+id/textView_question" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:textSize="35sp"
            android:padding="20dp"
            android:id="@+id/button"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/accent_material_light"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            >


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_back"
                android:background="@drawable/back"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="69dp"
                android:layout_marginTop="60dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_next"
                android:background="@drawable/next"
                android:layout_alignTop="@+id/imageButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="43dp"
                android:layout_marginStart="69dp"
                android:layout_marginTop="60dp"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:background="@drawable/stop"
                android:layout_alignTop="@+id/imageButton2"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="69dp"
                android:layout_marginTop="60dp"
                />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
